# bazel_rust_ring

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
