load("@rules_rust//rust:defs.bzl", "rust_binary")
package(default_visibility = ["//visibility:public"])

# Custom container macro
load("//:build/container.bzl", "build_multi_arch_image")


rust_binary(
    name = "hello_world",
    srcs = ["src/main.rs"],
    crate_root = "src/main.rs",
    deps = [
        "//thirdparty/crates:anyhow",
        "//thirdparty/crates:tokio",
        "//thirdparty/crates:tonic",
        "//thirdparty/crates:tonic-health",
        "//thirdparty/crates:warp",
    ],
)

build_multi_arch_image(
    name = "image_index",
    srcs = [":hello_world"],
    base = "@distroless",
    exposed_ports = [],
    platforms = [
        "//build/platforms:linux_x86_64_musl",
        "//build/platforms:linux_arm64_musl",
    ],
    visibility = ["//visibility:public"],
)

